@@ -1,6 +1,7 @@
 # Master Makefile for the man-db package.
 #
 # Copyright (C) 1994, 1995 Graeme Wilford.
+# Copyright (C) 2001, 2002, 2003 Colin Watson.
 #
 # This file is part of man-db.
 #
@@ -50,8 +51,8 @@ USE_NLS = @USE_NLS@
 # GNUmakefile and include/Defines are automatic targets, don't add below.
 INCLUDES := config.h $(addprefix include/, manconfig.h comp_src.h)
 CONF = src/man_db.conf
-EVERYTHING = lib libdb src zsoelim man intl po
-ALL = lib libdb src zsoelim man intl po
+EVERYTHING = lib intl libdb src zsoelim man po
+ALL = lib intl libdb src zsoelim man po
 INSTALL = src zsoelim man intl po
 
 include include/Defines
